modified get movie list by genre
