# api/swagger/swagger.json
@@ -210,7 +210,7 @@
                "200": {
                   "description": "Movies list for a specified genre",
                   "schema": {
-                     "$ref": "#/definitions/MovieList"
+                     "$ref": "#/definitions/MovieListByGenre"
                   }
                },
                "404": {
@@ -585,6 +585,33 @@
                   "properties": {
                      "Rating": {
                         "type": "string"
+                     }
+                  }
+               }
+            }
+         }
+      },
+      "MovieListByGenre": {
+         "type": "object",
+         "properties": {
+            "total": {
+               "type": "integer"
+            },
+            "results": {
+               "type": "array",
+               "items": {
+                  "type": "object",
+                  "properties": {
+                     "MovieID": {
+                        "type": "string"
+                     },
+                     "Rating": {
+                        "type": "object",
+                        "properties": {
+                           "Rating": {
+                              "type": "string"
+                           }
+                        }
                      }
                   }
                }
